--- a/Proway.Projeto00/Views/Categoria/Cadastrar.cshtml
+++ b/Proway.Projeto00/Views/Categoria/Cadastrar.cshtml
@@ -6,6 +6,7 @@
 
 <form asp-controller="Categoria" asp-action="Cadastrar" method="POST">
 
-    <partial name="Form" model="Model"/>
+    <partial name="Form" model="Model"></partial>
 
 </form>
+
