--- a/Proway.Projeto00/Views/Colaborador/Index.cshtml
+++ b/Proway.Projeto00/Views/Colaborador/Index.cshtml
@@ -1,19 +1,25 @@
 ﻿@using Proway.Projeto00.Enums
-@using Service.Extensions;
+@using Service.Extensions
 @model ColaboradorFolhaPagamentoViewModel
 
-<h1>Calculo de folha de pagamento</h1>
+<h1>Calculo de folha de Pagamento</h1>
 
-<form asp-controller="Colaborador" asp-action="Calcular" method="POST">
+<form asp-controller="Colaborador" asp-action="Calcular" method="post">
+
+    @*<div>
+        <label for="campo-nome">Nome</label>
+        <input type="text" id="campo-nome" name="nome" />
+    </div>*@
+
     <div>
-        <label asp-for="Nome" class="form-label"></label>
+        <label asp-for="Nome" class="form-label"  ></label>
         <input asp-for="Nome" class="form-control" />
         <span asp-validation-for="Nome" class="text-danger"></span>
     </div>
 
     <div>
         <label asp-for="QuantidadeHoraExtra" class="form-label"></label>
-        <input asp-for="QuantidadeHoraExtra" class="form-control"/>
+        <input asp-for="QuantidadeHoraExtra" class="form-control" />
         <span asp-validation-for="QuantidadeHoraExtra" class="text-danger"></span>
     </div>
 
@@ -24,14 +30,14 @@
     </div>
 
     <div>
-        <label asp-for="ValorHora" class="form-label"></label>
-        <input asp-for="ValorHora" class="form-control" />
+        <label asp-for="ValorHora" class="form-label" ></label>
+        <input asp-for="ValorHora"class="form-control" />
         <span asp-validation-for="ValorHora" class="text-danger"></span>
     </div>
 
     <div>
         <label asp-for="DataContratacao" class="form-label"></label>
-        <input asp-for="DataContratacao" class="form-control" />
+        <input asp-for="DataContratacao"class="form-control" />
         <span asp-validation-for="DataContratacao" class="text-danger"></span>
     </div>
 
@@ -45,10 +51,12 @@
             <option value="@ColaboradorCargo.Senior.ToInt()">Senior</option>
         </select>
         <span asp-validation-for="Cargo" class="text-danger"></span>
+
     </div>
 
     <div class="mt-3 float-end">
         <button class="btn btn-success" type="submit">Calcular</button>
     </div>
+
 
 </form>
