--- a/Proway.Projeto00/Views/Livro/Index.cshtml
+++ b/Proway.Projeto00/Views/Livro/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<LivroIndexViewModel>
 
+
+    
 <div class="row">
     <div class="col-12 mb-3">
         <a asp-action="Cadastrar"
@@ -13,9 +15,9 @@
     <thead>
         <tr>
             <th>Código</th>
-            <th>Título</th>
+            <th>Titulo</th>
             <th>Categoria</th>
-            <th>Preço</th>
+            <th>Preco</th>
             <th>Ação</th>
         </tr>
     </thead>
