--- a/Proway.Projeto00/Views/Categoria/Index.cshtml
+++ b/Proway.Projeto00/Views/Categoria/Index.cshtml
@@ -1,25 +1,22 @@
-﻿@model List<CategoriaIndexViewModel>
+﻿@model List<CategoriaIndexViewModel> 
 
 <div class="row">
     <div class="col-12 mb-3">
-        <a asp-controller="Categoria" asp-action="Cadastrar" 
+        <a asp-controller="Categoria" asp-action="Cadastrar"
             class="btn btn-primary float-end">
-            <i class="fa-solid fa-plus"></i> Cadastrar
-        </a>
+            <i class="fa-solid fa-plus"></i> Cadastrar</a>
     </div>
 </div>
-
-<table class="table table-striped table-bordered">
-    <thead>
-        <tr>
-            <th>Código</th>
-            <th>Nome</th>
-            <th>Ação</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var categoria in Model)
-        {
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>Código</th>
+                <th>Nome</th>
+                <th>Ação</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach(var categoria in Model){
             <tr>
                 <td>@categoria.Id</td>
                 <td>@categoria.Nome</td>
@@ -29,7 +26,7 @@
                     <a asp-controller="Categoria" asp-action="Apagar" asp-route-id="@categoria.Id"
                         class="btn btn-outline-danger">Apagar</a>
                 </td>
-            </tr>
-        }
-    </tbody>
-</table>
+            </tr>           
+            }
+        </tbody>
+    </table>
