--- a/Proway.Projeto00/Views/Livro/Cadastrar.cshtml
+++ b/Proway.Projeto00/Views/Livro/Cadastrar.cshtml
@@ -1,35 +1,36 @@
-﻿@model LivroCadastrarViewModel;
+﻿@model LivroCadastrarViewModel
 
-<form asp-action="Cadastrar" method="POST">
+<form asp-action="Cadastrar" method="post">
     <div class="form-group">
         <label asp-for="Titulo" class="form-label"></label>
         <input asp-for="Titulo" class="form-control" />
-        <span asp-validation-for="Titulo" class="text-danger"></span>
+        <span asp-validation-for="Titulo" class="text-danger" />
     </div>
     <div class="form-group">
         <label asp-for="Preco" class="form-label"></label>
         <input asp-for="Preco" class="form-control" />
-        <span asp-validation-for="Preco" class="text-danger"></span>
+        <span asp-validation-for="Preco" class="text-danger" />
     </div>
     <div class="form-group">
         <label asp-for="QuantidadePaginas" class="form-label"></label>
         <input asp-for="QuantidadePaginas" class="form-control" />
-        <span asp-validation-for="QuantidadePaginas" class="text-danger"></span>
+        <span asp-validation-for="QuantidadePaginas" class="text-danger" />
     </div>
     <div class="form-group">
         <label asp-for="Isbn" class="form-label"></label>
         <input asp-for="Isbn" class="form-control" />
-        <span asp-validation-for="Isbn" class="text-danger"></span>
+        <span asp-validation-for="Isbn" class="text-danger" />
     </div>
-    <div class="form-group mb-3">
+    <div class="form-group">
         <label asp-for="CategoriaId" class="form-label"></label>
         <select asp-for="CategoriaId" class="form-select">
-            @foreach (var categoria in ((List<CategoriaIndexViewModel>)ViewBag.Categorias))
-            {
-                <option value="@categoria.Id.ToString()">@categoria.Nome</option>
-            }
+            @foreach(var categoria in ((List<CategoriaIndexViewModel>)ViewBag.Categorias))
+                {
+                    <option value="@categoria.Id.ToString()">@categoria.Nome</option>
+                }
         </select>
     </div>
 
     <button type="submit" class="btn btn-success">Cadastrar</button>
+
 </form>
