--- a/Proway.Projeto00/Views/Livro/Editar.cshtml
+++ b/Proway.Projeto00/Views/Livro/Editar.cshtml
@@ -1,29 +1,33 @@
-﻿@model LivroEditarViewModel;
+﻿@model LivroEditarViewModel
 
-<form asp-action="Editar" method="POST">
+<form asp-action="Editar" method="post">
     <div class="form-group">
         <label asp-for="Titulo" class="form-label"></label>
         <input asp-for="Titulo" class="form-control" />
-        <span asp-validation-for="Titulo" class="text-danger"></span>
+        <span asp-validation-for="Titulo" class="text-danger" />
     </div>
     <div class="form-group">
         <label asp-for="Preco" class="form-label"></label>
         <input asp-for="Preco" class="form-control" />
-        <span asp-validation-for="Preco" class="text-danger"></span>
+        <span asp-validation-for="Preco" class="text-danger" />
     </div>
     <div class="form-group">
         <label asp-for="QuantidadePaginas" class="form-label"></label>
         <input asp-for="QuantidadePaginas" class="form-control" />
-        <span asp-validation-for="QuantidadePaginas" class="text-danger"></span>
+        <span asp-validation-for="QuantidadePaginas" class="text-danger" />
     </div>
-    <div class="form-group mb-3">
+    
+    <div class="form-group">
         <label asp-for="CategoriaId" class="form-label"></label>
         <select asp-for="CategoriaId" class="form-select">
             @foreach (var categoria in ((List<CategoriaIndexViewModel>)ViewBag.Categorias))
             {
-                @if(categoria.Id == Model.CategoriaId){
+                @if (categoria.Id == Model.CategoriaId)
+                {
                     <option value="@categoria.Id.ToString()" selected="selected">@categoria.Nome</option>
-                }else{
+                }
+                else
+                {
                     <option value="@categoria.Id.ToString()">@categoria.Nome</option>
                 }
             }
@@ -31,4 +35,5 @@
     </div>
 
     <button type="submit" class="btn btn-success">Cadastrar</button>
+
 </form>
